<resources>
    <string name="app_name">AppXtreme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Pantalla de carga-->
    <string name="copyright_1">Xtreme Multipagos</string>
    <string name="copyright_2">by</string>
    <string name="copyright_3">Grupo Xtreme</string>

    <!--Menu-->
    <string name="item_1">TAE</string>
    <string name="item_2">Servicios</string>
    <string name="item_3">Mi cuenta</string>


    <!--Main Activity/ Login-->
    <string name="usuario">Usuario</string>
    <string name="operador">Clave Operador</string>
    <string name="contraseña">Contraseña</string>
    <string name="checkbox">Mantener sesión iniciada</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="login">Login</string>

    <!--Inicio-->
    <string name="inicio_btn">Cerrar Sesión</string>

    <!--Progress Dialog-->
    <string name="iniciando">Iniciando Sesión</string>
    <string name="no_sesion">Algo ha salido mal, intente nuevamente</string>
    <string name="btnRetry">Intentar</string>
    <string name="cerrando">Cerrando sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--Fragments-->
    <string name="taefragment">Tae Recargas</string>
    <string name="servicefragment">Servicios pago</string>
    <string name="userfragment">Mi cuenta</string>

    <!--Fragmento TAE-->
    <string name="tae_pantalla">Elige un producto</string>

    <!--Fragmento Servicios-->
    <string name="servicio_pantalla">Elige un servicio</string>

    <!--Fragmento User-->
    <string name="fragmentTitleUser">PDV:</string>
    <string name="title_idpdv">ID PDV:</string>
    <string name="btn_saldo">Saldo Disponible</string>
    <string name="btn_pago">Reportar Pago</string>
    <string name="btn_ventas">Ventas recientes</string>
    <string name="btnLogout">Cerrar Sesión</string>
    <string name="avaliable">Saldo Actual</string>

    <!--SearchView-->
    <string name="search">Buscar</string>
    <string name="search_hint">Buscar producto</string>

    <!--Recarga Fragment-->
    <string name="btn_recarga">Recarga</string>
    <string name="producto">Seleccionar Producto</string>
    <string name="input_numero">Ingresar número</string>
    <string name="input_confirmar">Confirmar número</string>

    <!--Dialog Fragments-->
    <string name="dg_recarga">Recarga exitosa</string>
    <string name="btn_ticket">Aceptar</string>
    <string name="btn_screen">Screenshot</string>
    <string name="dg_errorR">Algo salió mal</string>
    <string name="dg_pago">Pago exitoso</string>

    <!--Pagar Servicios-->
    <string name="referencia">Número de referencia:</string>
    <string name="montoS">Monto a pagar:</string>
    <string name="btnPagar">Realizar Pago</string>

    <!--Progress Bar-->
    <string name="loading">Cargando...</string>
</resources>