<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgxtreme"
    tools:context=".main.appactivity.XtremeActivity">

    <!--Guias-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHorizonte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!--Views-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_greenmulti"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/guideTop1" />
    <!--Titulo Login-->
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorTextWhite"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/guideMid"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
    <!--Usuario Text-->
    <EditText
        android:id="@+id/userTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_login_user"
        android:layout_marginTop="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="15dp"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />
    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:hint="@string/contraseña"
        android:textColorHint="@color/colorTextWhite"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/userTxt"
        >

        <EditText
            android:id="@+id/passTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_login_key"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:textColor="@color/colorTextWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Operator-->
    <EditText
        android:id="@+id/operatorTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/ic_id"
        android:drawablePadding="15dp"
        android:hint="@string/operador"
        android:inputType="text"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"
        app:layout_constraintTop_toBottomOf="@id/tiPass"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        />

    <!--Boton Inicio-->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:gravity="center"
        android:id="@+id/signin"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="16dp"
        android:text="@string/btnLogin"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintVertical_bias="0.5"
        android:textAllCaps="false"
        android:textColor="@color/letters_2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:backgroundTint="#ffffff"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideBottom1"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/operatorTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>