<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingBottom="10dp"
    tools:context=".main.recargar.ui.XTRecargaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCarrier"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:text="@string/producto" />

            <!--
                        <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundColor="@color/placeholder_2"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <EditText
                    android:id="@+id/etProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            -->

            <Spinner
                android:id="@+id/spinnerProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/input_numero" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundColor="@color/placeholder_2"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <EditText
                    android:id="@+id/etNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:text="@string/input_confirmar" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundColor="@color/placeholder_2"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <EditText
                    android:id="@+id/etConfirmar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRecargar"
                android:layout_width="190dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shadow_color"
                android:text="@string/btn_recarga"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:backgroundTint="#26418f" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>