<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:weightSum="4"
    android:orientation="vertical"
    tools:context=".main.user.ui.XTUserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_user_account" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:elevation="36dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmentTitleUser"
                android:textStyle="bold"
                android:textSize="32dp" />
            <TextView
                android:id="@+id/tvOperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                tools:text="PDV"
                android:textSize="32sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="45dp"
            >
            <TextView
                android:id="@+id/titleIdPDV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_idpdv"
                android:textSize="28sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvIdPDV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                tools:text="ID"
                android:textSize="28sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avaliable"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/titleSaldoRecarga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recargas:"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/titleSaldoServicios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="Servicios:"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/titleSaldoRecarga" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvSaldoRecarga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tools:text="0.00" />

                <TextView
                    android:id="@+id/tvSaldoServicios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/titleSaldoRecarga"
                    tools:text="0.00" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="18dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPago"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:paddingVertical="16dp"
                    android:text="@string/btn_pago"
                    android:textAllCaps="false"
                    android:textColor="#5E6168"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:backgroundTint="@color/xtreme_2"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnVentas"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/btn_ventas"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_sells"
                    app:strokeColor="@color/xtreme_3"
                    app:strokeWidth="3dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogout"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/btnLogout"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_logout"
                    app:strokeColor="@color/xtreme_3"
                    app:strokeWidth="3dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>